--- a/css/v2/src/website.css
+++ b/css/v2/src/website.css
@@ -8861,14 +8861,6 @@ a:hover span.h6-product-tab {
     line-height: 40px
 }
 
-h1.slogan,
-h1.slogan h3,
-h3.get-out-subtitle {
-    font-family: myriad-pro, Arial, sans-serif;
-    color: #fff;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, .61)
-}
-
 .second-level-menu-wrapper.tabs.fixed {
     position: fixed;
     top: 0;
@@ -8898,6 +8890,14 @@ h3.get-out-subtitle {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center
+}
+
+div.slogan, 
+div.slogan h3, 
+h3.get-out-subtitle {
+    font-family: myriad-pro,Arial,sans-serif;
+    color: #fff;
+    text-shadow: 0 1px 2px rgba(0,0,0,.61);
 }
 
 div.slogan {
@@ -12863,15 +12863,6 @@ platform-page-content .unbreakable-deployment ul li {
     height: 50px
 }
 
-.navigation-items {
-    font-family: myriad-pro, Arial, sans-serif;
-    height: 50px;
-    float: right;
-    opacity: 1;
-    visibility: initial;
-    transition: all .5s ease
-}
-
 .navigation-search-outter {
     overflow-x: hidden;
     position: absolute;
@@ -12915,13 +12906,6 @@ span[id*=ListSection] {
 
 .navigation-items span[id*=ListSection] {
     height: 50px
-}
-
-.navigation-bar li {
-    height: 47px;
-    margin-top: 18px;
-    border-bottom: 3px solid transparent;
-    z-index: 10000
 }
 
 .header-hero-wrapper:not(.home) .navigation-bar li {
@@ -13023,26 +13007,6 @@ body.mega-menu .solution-all-hero .navigation-outter {
 .sub-navigation-bar li.active a {
     font-weight: 600;
     border-bottom: 1px solid gray
-}
-
-.navigation-bar-tail-logo {
-    padding: 7px 0;
-    max-width: none
-}
-
-ul.navigation-bar {
-    height: 50px;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-line-pack: justify;
-    -webkit-align-content: space-between;
-    align-content: space-between;
-    box-sizing: border-box
-}
-
-ul.navigation-bar span:last-child {
-    height: 50px
 }
 
 span.spacer-bg {
@@ -13818,10 +13782,6 @@ ul {
 #footer-mid.us ul.footer-nav-landing {
     margin-top: 20px;
     height: 130px
-}
-
-#footer-mid li {
-    padding: 0 15px
 }
 
 #footer-mid li p.details {
