--- a/css/v2/src/website.css
+++ b/css/v2/src/website.css
@@ -11314,7 +11314,7 @@ div.Popup.ui-dialog .ui-resizable-ne {
     margin-top: -30px
 }
 
-.case-study-videos {
+.hero-placeholder .case-study-videos {
     background: #fff;
     height: 430px;
     top: 80px;
