--- a/css/v2/src/website-header.css
+++ b/css/v2/src/website-header.css
@@ -1,25 +1,19 @@
 .navigation-bar-section{
     float: left;
-    height: 55px
+    height: 50px
 }
 
 .navigation-items {
     font-family: myriad-pro, Arial, sans-serif;
     height: 50px;
     float: right;
-    opacity: 1;
     visibility: initial;
-    transition: all .5s ease
 }
 
 .navigation-longtail,
 .searchview,
 .searchview-content {
     transition: all .5s ease
-}
-
-.header-hero-wrapper.home .navigation-longtail {
-    margin-top: 20px
 }
 
 .header-hero-wrapper.home .navigation-outter {
@@ -162,7 +156,7 @@ span[id*=ListSection] {
     position: relative;
     font-size: 15px;
     letter-spacing: .05em;
-    z-index: 10000
+    z-index: 999;
 }
 
 .header-hero-wrapper:not(.home) .navigation-bar li.active {
@@ -291,13 +285,9 @@ li.get-started a {
     top: -10px;
     z-index: 3;
     width: 100%;
-    background: rgba(66, 65, 65, .52);
-    background: -moz-linear-gradient(top, rgba(0, 0, 0, .65) 0, rgba(0, 0, 0, .65) 9%, rgba(0, 0, 0, .65) 28%, rgba(0, 0, 0, .65) 57%, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0) 100%);
-    background: -webkit-linear-gradient(top, rgba(0, 0, 0, .65) 0, rgba(0, 0, 0, .65) 9%, rgba(0, 0, 0, .65) 28%, rgba(0, 0, 0, .65) 57%, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0) 100%);
-    background: linear-gradient(to bottom, rgba(0, 0, 0, .65) 0, rgba(0, 0, 0, .65) 9%, rgba(0, 0, 0, .65) 28%, rgba(0, 0, 0, .65) 57%, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0) 100%);
+    -webkit-transition: all .5s ease;
+    transition: all .5s ease;
     border: none;
-    border-radius: 3px;
-    margin-left: 28px
 }
 
 .home .searchview-content {
@@ -334,23 +324,24 @@ li.get-started a {
 }
 
 .searchform-wrapper {
-    position: relative;
-    z-index: 2;
-    height: 35px;
-    line-height: 35px;
-    width: 100%;
-    padding-left: 0;
-    box-sizing: border-box;
-    margin-top: 60px;
-    border-bottom: 1px solid rgba(255, 255, 255, .49);
-    padding-bottom: 5px
+    position:relative;
+    z-index:2;
+    height:35px;
+    line-height:35px;
+    width:73%;
+    padding-left:0;
+    margin-top:40px;
+    border-bottom:1px solid rgba(255,255,255,.49);
+    padding-bottom:5px;
+    margin-left:26%;
+    margin-right:1%;
 }
 
 input[type=search].searchform-input {
     width: 90%;
     font-size: 24px;
     line-height: 1.375;
-    font-family: myriad-pro;
+    font-family:myriad-pro, arial, sans-serif;
     font-weight: 100;
     letter-spacing: normal;
     height: 35px;
@@ -394,7 +385,7 @@ input[type=search].searchform-input:focus {
 .searchview-close-left,
 .searchview-close-right {
     height: 20px;
-    width: 1px;
+    width: 2px;
     background: #fff;
     position: absolute;
     display: block;
